--- a/pump.html
+++ b/pump.html
@@ -26,6 +26,11 @@
       background: radial-gradient(circle at top, #fff8ef 0%, #fdf1e6 40%, #f7e6d5 100%);
       font-family: 'Cormorant Garamond', serif;
       padding: 20px;
+      transition: background 0.5s ease;
+    }
+
+    body.balloon-popped {
+      background: center/cover no-repeat url('./jenny_.jpeg');
     }
 
     h3 {
@@ -263,8 +268,11 @@
 </head>
 <body>
 
-  <h3>Pump the Balloon 🎈</h3>
-  <p class="subtitle">Keep pumping… but not too much!</p>
+  <h3>Pump the Balloon, Jenny 🎈</h3>
+<p class="subtitle">
+Pump gently… too much love and it might explode 💥  
+And when it does, you’ll hear my heart beating for you ❤️
+</p>
 
   <div class="scene">
     <div class="balloon-setup">
@@ -292,7 +300,7 @@
   </div>
 
   <audio id="song" preload="auto">
-    <source src="./abhitotum_a9m19e1791.mp3" type="audio/mpeg">
+    <source src="./hota_agar_shayar.mp3" type="audio/mpeg">
   </audio>
 
   <script>
@@ -302,21 +310,40 @@
     const pumpLabel = document.getElementById('pumpLabel');
     const song = document.getElementById('song');
 
-    const maxPumps = 10;
+    const minPumps = 4;
+    const maxPossiblePumps = 18;
     const baseSize = 90;
     const maxSize = 280;
 
     let pumps = 0;
     let hasPopped = false;
+    let burstAt = minPumps + Math.floor(Math.random() * (maxPossiblePumps - minPumps + 1));
 
     function getScale() {
-      return baseSize + (pumps / maxPumps) * (maxSize - baseSize);
+      return baseSize + Math.min(1, pumps / burstAt) * (maxSize - baseSize);
     }
 
     function updateBalloon() {
       const size = getScale();
       balloon.style.width = size + 'px';
       balloon.style.height = size * 1.25 + 'px';
+    }
+
+    function playPumpSound() {
+      try {
+        const ctx = new (window.AudioContext || window.webkitAudioContext)();
+        const osc = ctx.createOscillator();
+        const gain = ctx.createGain();
+        osc.connect(gain);
+        gain.connect(ctx.destination);
+        osc.frequency.setValueAtTime(80, ctx.currentTime);
+        osc.frequency.exponentialRampToValueAtTime(40, ctx.currentTime + 0.08);
+        osc.type = 'sawtooth';
+        gain.gain.setValueAtTime(0.12, ctx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.08);
+        osc.start(ctx.currentTime);
+        osc.stop(ctx.currentTime + 0.08);
+      } catch (_) {}
     }
 
     function playPopSound() {
@@ -390,6 +417,7 @@
 
       balloon.classList.add('popped');
       pumpLabel.textContent = 'Pop!';
+      document.body.classList.add('balloon-popped');
 
       playPopSound();
       createBlast();
@@ -402,17 +430,18 @@
     function pump() {
       if (hasPopped) return;
 
+      playPumpSound();
       pumpHandle.classList.add('pumping');
       setTimeout(() => pumpHandle.classList.remove('pumping'), 150);
 
       pumps++;
       updateBalloon();
 
-      if (pumps >= maxPumps) {
+      if (pumps >= burstAt) {
         pumpContainer.style.pointerEvents = 'none';
         pop();
       } else {
-        pumpLabel.textContent = `Pump (${pumps}/${maxPumps})`;
+        pumpLabel.textContent = `Pump (${pumps})`;
       }
     }
 
